# EigenUniversalIntegration

./: .zenodo.json  CMakeLists.txt  Readme.md  flake.nix
EigenIntegration/: MtxIO.hpp  Overrides.hpp  std_integration.hpp
EigenIntegration/internal/: dot.hpp  eigen_fdp.hpp  generic.hpp  generic_gemm.hpp  generic_gemv.hpp  generic_inner.hpp  generic_lazy.hpp  make_generic_left.hpp  make_generic_product_type.hpp  make_generic_right.hpp  make_generics.hpp  posit_concepts.hpp  test_bitmask.hpp
patch/: eigen_svd.patch
test/: test_complex.cxx  test_eigen_correctness_and_usage.cxx  test_eigen_unit.cxx  test_matrix_io.cxx  test_patched_eigen_svd.cxx  test_sparse.cxx  test_std_functions.cxx
